--- a/index.html
+++ b/index.html
@@ -1,73 +1,9 @@
 <!doctype html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Обеспечивает адаптивность -->
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Обеспечиваем, что страница растягивается на весь экран */
-        body, html {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0; /* Цвет фона */
-        }
-
-        /* Контейнер, который будет растягиваться на весь экран */
-        .container-wrapper-genially {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        /* Стиль видео, которое будет по центру */
-        .loader-genially {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80px;
-            height: 80px;
-            margin-bottom: 10%;
-        }
-
-        /* Поддержка адаптивности для генерируемого контента */
-        .genially-embed {
-            width: 100%;
-            height: 100%;
-            max-width: 1200px; /* Ограничиваем максимальную ширину контента */
-            position: relative;
-        }
-    </style>
-</head>
+<html><head><meta charset="utf-8"><title>My Website</title><link rel="stylesheet" href="styles.css"></head>
 <body>
+<div style="width: 100%;"><div style="position: relative; padding-bottom: 112.5%; padding-top: 0; height: 0;">
+<iframe title="horizontal cv 2in1" frameborder="0" width="2400" height="2700" 
+style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/67edab4c6e06c9cda5db6948" 
+type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
 
-<div class="container-wrapper-genially">
-    <video class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted">
-        <source src="https://static.genially.com/resources/loader-default-rebranding.mp4" type="video/mp4" />
-        Ваш браузер не поддерживает тег video.
-    </video>
-    <div id="67edab4c6e06c9cda5db6948" class="genially-embed"></div>
-</div>
-
-<script>
-    (function (d) { 
-        var js, id = "genially-embed-js", ref = d.getElementsByTagName("script")[0]; 
-        if (d.getElementById(id)) { return; } 
-        js = d.createElement("script"); 
-        js.id = id; 
-        js.async = true; 
-        js.src = "https://view.genially.com/static/embed/embed.js"; 
-        ref.parentNode.insertBefore(js, ref); 
-    }(document));
-</script>
-
-</body>
-</html>
+</body></html>
