--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html><head><meta charset="utf-8"><title>My Website</title><link rel="stylesheet" href="styles.css"></head>
 <body>
-<div style="width: 100%;"><div style="position: relative; padding-bottom: 112.5%; padding-top: 0; height: 0;">
-<iframe title="horizontal cv 2in1" frameborder="0" width="2400" height="2700" 
-style="position: absolute; top: 0; left: 0; width: 120%; height: 100%;" src="https://view.genially.com/67edab4c6e06c9cda5db6948" 
-type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
-
+    <div class="container-wrapper-genially" style="position: relative; min-height: 400px; max-width: 100%;"><video class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted" style="position: absolute;top: 45%;left: 50%;transform: translate(-50%, -50%);width: 80px;height: 80px;margin-bottom: 10%"><source src="https://static.genially.com/resources/loader-default-rebranding.mp4" type="video/mp4" />Your browser does not support the video tag.</video><div id="67edc0b37fbdfc2cf5e8902c" class="genially-embed" style="margin: 0px auto; position: relative; height: auto; width: 100%;"></div></div><script>(function (d) { var js, id = "genially-embed-js", ref = d.getElementsByTagName("script")[0]; if (d.getElementById(id)) { return; } js = d.createElement("script"); js.id = id; js.async = true; js.src = "https://view.genially.com/static/embed/embed.js"; ref.parentNode.insertBefore(js, ref); }(document));</script>
+    <div class="container-wrapper-genially" style="position: relative; min-height: 400px; max-width: 100%;">
+       <div id="67edc00d7fbdfc2cf5e80aa5" class="genially-embed" style="margin: 0px auto; position: relative; height: auto; width: 100%;"></div></div><script>(function (d) { var js, id = "genially-embed-js", ref = d.getElementsByTagName("script")[0]; if (d.getElementById(id)) { return; } js = d.createElement("script"); js.id = id; js.async = true; js.src = "https://view.genially.com/static/embed/embed.js"; ref.parentNode.insertBefore(js, ref); }(document));setInterval(() => {
+        document.querySelectorAll('a[href*="genially.com"]').forEach(el => el.remove());
+    }, 1000); // Проверяем каждую секунду и удаляем</script>
 </body></html>
